maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
var cpt = 0
^JediEscaper:2: error: expected class or object definition
var cpt = 0
^JediEscaper:4: error: expected start of definition
override def run() {
         ^JediEscaper:28: error: expected class or object definition
def trouveLeBiscuit(): Array[Int] = {
^JediEscaper:46: error: expected class or object definition
def marqueCaseAutour (x : Int, y : Int) {
^JediEscaper:69: error: Missing closing brace `}' assumed here
  if (!aMurSud) {
  ^